solved spacing for themes

--- a/styles.css
+++ b/styles.css
@@ -142,6 +142,7 @@ ul.temi {
     list-style: none;
     display: flex;
     justify-content: space-around;
+    padding: 0;
 }
 
 div.temi {
